--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 </script>
         </div> -->
         <div class="home-text">
-            <span> Hello, I'm </span>
+            <span> Hello, My self </span>
             <h1> Koushik Banerjee </h1>
             <h2> Full Stack Web Developer </h2>
-            <p>Lorem ipsum dolor sit amet cons <br> adipisicing elit. Minima, consectetur <br> ullam?</p>
-            <a href="#" class="btn"> Download CV </a>
+            <p></p>
+            <a href="./Koushik's Resume (3).pdf" class="btn"> Download CV </a>
         </div>
     </section>
     <!-- Home Section End -->
@@ -90,8 +90,9 @@
                 <img src="./WhatsApp Image 2023-09-29 at 1.56.07 PM.jpeg" alt="not found">
             </div>
             <div class="about-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias suscipit alias rem fugit quae ex
-                    saepe cumque unde eius accusantium.</p>
+                <p>An enthusiastic person with high optimism and leadership skills passout bachelors of technology degree in electronics and
+                    communication. Eager to learn and implement new technologies and methodologies. Always willing to innovate new things
+                    which can improve the existing technology</p>
                 <div class="information">
                     <div class="info-box">
                         <i class="bx bxs-user"></i>
@@ -106,7 +107,7 @@
                         <span>koushik8820559617@gmail.com</span>
                     </div>
                 </div>
-                <a href="#" class="btn"> Download CV </a>
+                <a href="./Koushik's Resume (3).pdf" class="btn"> Download CV </a>
             </div>
         </div>
         <!-- <img decoding="async"
@@ -214,12 +215,12 @@
             <div class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3> Web Development </h3>
-                <a href="#"> Lrean More </a>
+                <a href="https://007koushik.github.io/koushikkb/"> Lrean More </a>
             </div>
             <div class="services-box">
                 <i class="bx bx-user"></i>
                 <h3> Frontend Development </h3>
-                <a href="#"> Lrean More </a>
+                <a href="http://wealthgram.in/"> Lrean More </a>
             </div>
             <div class="services-box">
                 <i class="bx bx-server"></i>
