--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <!-- Home Section Start -->
     <section id="home" class="home">
         <div class="social">
-            <a href="https://github.com/007koushik"><i class="bx bxl-github"></i></a>
-            <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href=""><i class="bx bxl-instagram"></i></a>
+            <a href="https://github.com/007koushik" target="_blank"><i class="bx bxl-github"></i></a>
+            <a href="#" target="_blank"><i class="bx bxl-facebook"></i></a>
+            <a href="" target="_blank"><i class="bx bxl-instagram"></i></a>
         </div>
         <div class="home-img">
             <img src="./WhatsApp Image 2023-09-29 at 1.56.04 PM.jpeg" alt="not found">
@@ -68,7 +68,7 @@
             <h1> Koushik Banerjee </h1>
             <h2> Full Stack Web Developer </h2>
             <p></p>
-            <a href="./Koushik's Resume (3).pdf" class="btn"> Download CV </a>
+            <a href="./Koushik's Resume (3).pdf" target="_blank" class="btn"> Download CV </a>
         </div>
     </section>
     <!-- Home Section End -->
@@ -107,7 +107,7 @@
                         <span>koushik8820559617@gmail.com</span>
                     </div>
                 </div>
-                <a href="./Koushik's Resume (3).pdf" class="btn"> Download CV </a>
+                <a href="./Koushik's Resume (3).pdf" target="_blank" class="btn"> Download CV </a>
             </div>
         </div>
         <!-- <img decoding="async"
@@ -215,22 +215,22 @@
             <div class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3> Web Development </h3>
-                <a href="https://007koushik.github.io/koushikkb/"> Lrean More </a>
+                <a href="https://007koushik.github.io/koushikkb/" target="_blank"> Lrean More </a>
             </div>
             <div class="services-box">
                 <i class="bx bx-user"></i>
                 <h3> Frontend Development </h3>
-                <a href="http://wealthgram.in/"> Lrean More </a>
+                <a href="http://wealthgram.in/" target="_blank"> Lrean More </a>
             </div>
             <div class="services-box">
                 <i class="bx bx-server"></i>
                 <h3> Backend Development </h3>
-                <a href="#"> Lrean More </a>
+                <a href="#" target="_blank"> Lrean More </a>
             </div>
             <div class="services-box">
                 <i class="bx bx-data"></i>
                 <h3> Database Development </h3>
-                <a href="#"> Lrean More </a>
+                <a href="#" target="_blank"> Lrean More </a>
             </div>
         </div>
         <!-- <h3>Web Development</h3>
@@ -283,7 +283,7 @@
     </div>
 
     <div class="copyright">
-        © PortFlix | All Right Reserved.
+       | Koushik Banerjee || All Right Reserved.
     </div>
 
 
